--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
     "daisyui": "^5.1.14",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
@@ -19,7 +20,8 @@
     "react-hook-form": "^7.63.0",
     "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.13",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
