--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "daisyui": "^5.1.14",
     "lucide-react": "^0.544.0",
+    "monaco-editor": "^0.53.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
